@@ -140,6 +140,7 @@ DECLARE SUB defaultc ()
 DECLARE SUB forcedismount (choosep, say, sayer, showsay, say$(), saytag(), choose$(), chtag(), saybit(), sayenh(), catd(), foep)
 DECLARE SUB setusermenu (menu$(), mt%, mi%())
 DECLARE FUNCTION maplumpname$ (map, oldext$)
+DECLARE SUB expcommands (id%, stat%())
 
 '---INCLUDE FILES---
 '$INCLUDE: 'compat.bi'
@@ -175,7 +176,7 @@ storekeyhandler
 DIM font(1024), master(767), buffer(16384), pal16(448), timing(4), joy(14), music(16384)
 DIM door(206), gen(104), npcl(2100), npcs(1500), saytag(21), tag(127), hero(40), stat(40, 1, 16), bmenu(40, 5), spell(40, 3, 23), lmp(40, 7), foef(99), menu$(20), exlev&(40, 1), names$(40), mi(10), gotj(2), veh(21)
 DIM item(-3 TO 199), item$(-3 TO 199), eqstuf(40, 4), gmap(20), csetup(20), carray(20), stock(99, 49), choose$(1), chtag(1), saybit(0), sayenh(6), catx(15), caty(15), catz(15), catd(15), xgo(3), ygo(3), herospeed(3), wtog(3), say$(7), hmask(3),  _
-tastuf(40), cycle(1), cycptr(1), cycskip(1), herobits(59, 3), itembits(255, 3)
+tastuf(40), cycle(1), cycptr(1), cycskip(1), herobits(59, 3), itembits(255, 3), learnmask(29)
 DIM mapname$, catermask(0), nativehbits(40, 4), keyv(55, 1)
 DIM script(4096), heap(2048), global(1024), astack(512), scrat(128, 13), retvals(32), plotstring$(31), plotstrX(31), plotstrY(31), plotstrCol(31), plotstrBGCol(31), plotstrBits(31)
 '--stuff we used to DIM here, but have defered to later
@@ -2286,10 +2287,12 @@ SELECT CASE scrat(nowscript, curkind)
       END IF
      END IF
     END IF
- CASE 210'--show string
- IF retvals(0) >= 0 AND retvals(0) <= 31 THEN
- scriptout$ = plotstring$(retvals(0))
- END IF
+   CASE 183 TO 186
+    expcommands scrat(nowscript, curvalue), stat()
+   CASE 210'--show string
+    IF retvals(0) >= 0 AND retvals(0) <= 31 THEN
+     scriptout$ = plotstring$(retvals(0))
+    END IF
    CASE ELSE '--try all the scripts implemented in subs
     scriptnpc scrat(nowscript, curvalue)
     scriptmisc scrat(nowscript, curvalue)
